# tranotra-AIFind

./: .env  .env.example  .env.test  .gitignore  CLAUDE.md  ENVIRONMENT_SETUP.md  GIT_SETUP.md  Makefile  README.md  SECURITY_CHECKLIST.md  import_gemini_responses.py  pyproject.toml  pytest.ini  review-diff.txt  run.py  run_app.py
.claude/: settings.local.json
01docs/: 03tranotra_leads_PRD.md  Aistudio_google_result.md  claude-phase1-design-20260331.md  claude-phase1-design-ceo-reviewed-20260331.md  systeminstruction.md  userpromt.md
_bmad-output/: deferred-work.md  prd-validation-report.md  project-context.md
_bmad-output/implementation-artifacts/: 1-1-flask-application-initialization.md  1-3-gemini-api-integration.md  1-4-gemini-grounding-search.md  1-5-data-parsing-normalization.md  2-1-results-page-api.md  2-2-card-view-display.md  2-3-completion-summary.md  2-3-feature-demo.md  2-3-implementation-checklist.md  2-3-table-view-sorting.md  2-4-code-review-fixes.md  2-4-completion-summary.md  2-4-feature-demo.md  2-4-final-review-report.md  2-4-implementation-checklist.md  2-4-merge-summary.txt  2-4-view-switching.md  2-5-csv-export.md  2-5-implementation-summary.md  2-5-patches-applied.md  2-5-review-acceptance-auditor.md  2-5-review-blind-hunter.md  2-5-review-edge-case-hunter.md  2-5-review-triage.md  3-1-dashboard-metrics.md  4-cli-command-specification.md  QUICK-START-INTEGRATION-TESTS.md  adversarial-review-report.md  deferred-work.md  sprint-status.yaml  (+8 more)
templates/: dashboard.html  index.html  results.html
tests/: __init__.py  conftest.py  test_config.py  test_format_detection.py  test_gemini_client.py  test_search_api.py  test_search_form.py  test_search_results_api.py
(+122 files in other folders)
